Set up primary component tree from App

--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fylakas</title>
 </head>
 <body>
   <main id="root"></main>
-  <script src="build/bundle.js"></script>
+  <!-- <script src="../build/bundle.js"></script> -->
 </body>
 </html>
