--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <main id="root"></main>
-  <!-- <script src="./bundle.js"></script> -->
+  <script src="./bundle.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
